Add some addtiona Server fields.
- Added MQ External Bind and Port input fields.
- Added MQ Internal Bind and Port input fields.
- Added an API Server Token field.
- Added a mosquitto.conf template file.
- Updated the Netmaker.yaml template for the new fields.

--- a/src/opnsense/service/templates/OPNsense/Netmaker/netmaker.yaml
+++ b/src/opnsense/service/templates/OPNsense/Netmaker/netmaker.yaml
@@ -6,11 +6,12 @@ server:
   server: "broker.{{server.baseDomain}}"
   apiport: "{{server.intApiPort}}"
   apiconn: "api.{{server.baseDomain}}:{{server.extApiPort}}"
-  masterkey: "Something"
-  mqhost: "{{server.mqHost}}"
-  mqport: "{{server.mqPort}}"
+  masterkey: "{{server.apiServerToken}}"
+  mqhost: "{{server.mqHostInt}}"
+  mqport: "{{server.mqPortInt}}"
   mqadminpassword: "{{server.mqAdminPwd}}"
 {%     endif %}
 {%   endfor %}
 {% endif %}
   manageiptables: "off"
+  messagequeuebackend: "off"
